# crowdstop.ai

./: Dockerfile  README.md  docker-compose.yml  openapi.json  openapi.yaml  pyproject.toml
crowdstop/: main_camera.py  main_server.py  moteval.py  motracker.py  neo4j_demo.ipynb  server.py
crowdstop/configs/: camera_15_config.json  camera_16_config.json  camera_5_config.json  camera_7_config.json  camera_8_config.json
crowdstop/ml/: multiple_object_tracker.py  zone_config.json
crowdstop/models/: api.py  camera_config.py  db.py  enums.py  sompt.py
crowdstop/services/: neo4j_client.py
notebooks/: neo4j_demo.ipynb
scripts/: detect_one_image.py  format_det.py  moteval.py  motracker.py  save_openapi.py  vid2img.py
tests/: conftest.py  test_server.py
